--- a/Example/QLCommonUtils/Base.lproj/Main.storyboard
+++ b/Example/QLCommonUtils/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +20,22 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2wL-ym-nWI">
+                                <rect key="frame" x="16" y="20" width="343" height="597"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2wL-ym-nWI" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leadingMargin" id="WIC-kF-6mA"/>
+                            <constraint firstItem="2wL-ym-nWI" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" id="hW9-50-o5v"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2wL-ym-nWI" secondAttribute="trailing" id="oao-8a-pa8"/>
+                            <constraint firstItem="Mvr-aV-6Um" firstAttribute="top" secondItem="2wL-ym-nWI" secondAttribute="bottom" constant="50" id="xSk-Mh-T99"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="2wL-ym-nWI" id="hoW-Ue-Vw2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
